# codesoft

./: .gitignore  README.md  main.cpp
number-guessing-game-console/: App.cpp  Game.cpp  Interactor.cpp  Interactor.h  Parser.cpp  UISpecific.cpp  UISpecific.h
number-guessing-game-gui/: app.out  game.out
number-guessing-game-gui/Frames/: GameFrame.h  StartFrame.cpp
number-guessing-game-gui/Game/: Game.h
task-1/: README.md
task-1/number-guessing-game-console/: Game.cpp  Game.h  Makefile  Parser.h  Player.h
task-1/number-guessing-game-gui/: App.cpp  Makefile  app.out
task-2/calculator-console/: main  main.cpp
task-3/: README.md
task-3/tic-tac-toe-console/: Clear.cpp  Clear.h  Game.cpp  Game.h  GameMode.h  Interactor.cpp  Interactor.h  Player.cpp  Player.h  game.out  main.cpp
task-3/tic-tac-toe-gui/: app.out
task-3/tic-tac-toe-gui/Game/: Board.h  (+5 more)
task-4/: README.md
task-4/todo-list-console/: App.cpp  App.h  Task.h  TasksData.h  game.out  main  main.cpp  tasks.txt
task-4/todo-list-gui/: App.cpp  Makefile  app.out
task-5/image-processing-tool/: App.cpp  CMakeLists.txt  MainFrame.cpp  MainFrame.h  Makefile  app.out
task-5/image-processing-tool/headers/: BlurDialog.h  BrightnessDialog.h  ContrastDialog.h  CropDialog.h  MainFrame.h  ResizeDialog.h  Utils.h
task-5/image-processing-tool/src/: App.cpp  BlurDialog.cpp  BrightnessDialog.cpp  ContrastDialog.cpp  CropDialog.cpp  MainFrame.cpp  ResizeDialog.cpp  Utils.cpp
task-5/image-processing-tool/src/MainFrame/: EventHandlers.cpp  Helpers.cpp  InitUI.cpp
task-5/src/: app.out  main-image-dialogs.cpp
(+15 files in other folders)
